[workspace]
resolver = "2"
members = [
	"cli",
	"executor",
	"primitives",
	"rpc",
	"runtime",
	"pallets/chainbridge",
	"pallets/erc721",
	"pallets/bridge",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

redox_users = { version = '0.3.5' }
ahash = { version = '0.5.10' }