[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.101", optional = true, default-features = false, features = [ "derive" ] }
sha3 = { version = "0.10", default-features = false }
impl-serde = { version = "0.3.2", default-features = false }
hex = { version = "0.4", default-features = false }
log = "0.4.14"
libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ] }

scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-core = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"serde/std",
	"impl-serde/std",
	"hex/std",
	"libsecp256k1/std",
	"sha3/std",
]
