[package]
name = "node-testing"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test utilities for Substrate node."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-service = { version = "0.10.0-dev", features = [
    "test-helpers",
    "db",
], git = 'https://github.com/paritytech/substrate.git' }
sc-client-db = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', features = [
    "kvdb-rocksdb",
    "parity-db",
] }
sc-client-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git' }
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-keyring = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git' }
node-executor = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git' }
node-runtime = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git' }
sc-executor = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', features = [
    "wasmtime",
] }
sp-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
substrate-test-client = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git' }
pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
pallet-asset-tx-payment = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sp-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sp-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-block-builder = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sc-block-builder = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sp-inherents = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git' }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.19"
