[package]
name = 'pallet-erc721'
version = '0.0.1'
authors = ["Hoa Le <lvhoa58@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
pallet-chainbridge = { path = "../chainbridge", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"]}
# primitives
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-chainbridge/std"
]
