[package]
name = "rpc-core-txpool"
authors = ["Hoa Le <lvhoa58@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
license = "GPL-3.0-only"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.12.0", git = 'https://github.com/rust-blockchain/ethereum', default-features = false, features = [ "with-codec" ] }
ethereum-types = "0.13.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rustc-hex = "2.1.0"

fc-rpc-core = { path = '../../../frontier/client/rpc-core' }
