[package]
name = "rpc-txpool"
authors = ["Hoa Le <lvhoa58@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"
license = "GPL-3.0-only"
version = "0.6.0"

[dependencies]
ethereum-types = "0.13.1"
ethereum = { version = "0.12.0", git = 'https://github.com/rust-blockchain/ethereum', default-features = false, features = [ "with-codec" ] }
jsonrpc-core = "18.0.0"
rlp = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.9"
rpc-core-txpool = { path = "../../rpc-core/txpool" }
fp-rpc = { path = '../../../frontier/primitives/rpc' }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
fc-rpc = { path = '../../../frontier/client/rpc', features = [ "rpc_binary_search_estimate" ] }
